--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="ko">
+
 <head>
-<meta charset="utf-8"/>
+
+<meta charset="UTF-8" />
+
+
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
     
     <title>아름다운 아파트</title>
@@ -10,8 +15,12 @@
 <link rel="stylesheet" href="./css/jquery.mobile-1.4.5.min.css" />
 <script src="./js/jquery-1.11.1.min.js"></script>
 <script src="./js/jquery.mobile-1.4.5.min.js"></script>
+<!--<link rel="stylesheet" href="nav.css" /> --><!-- 네이용 css -->
+<!-- 공통 연결 -->
+      
 
 <style>
+html { overflow-y:scroll; overflow-x:hidden; }
 
 .container {
   background: linear-gradient(#81c8fc, #eaf5fb);
@@ -20,8 +29,8 @@
   width: 100%;
   height: 818px;
   background-size: 100% 818px;
-  position: absolute;
-  z-index: -999;
+  /*position: absolute;
+  z-index: -999;*/
 }
 
 .bird {
@@ -97,6 +106,7 @@
     </style>
 
 </head>
+
 <body translate="no">
 <div class="container">
 <h1>아름다운 아파트</h1>
