--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-
-<html lang="ko">
-
+<!DOCTYPE html>
+<html>
 <head>
 
 <meta charset="UTF-8" />
@@ -26,9 +25,9 @@ html { overflow-y:scroll; overflow-x:hidden; }
   background: linear-gradient(#81c8fc, #eaf5fb);
   background-image: url("apt.jpg");
   background-repeat: no-repeat;
-  width: 100%;
-  height: 818px;
-  background-size: 100% 818px;
+  /*width: 1600px;*/
+  height: 870px;
+  background-size: 100% 100%;
   /*position: absolute;
   z-index: -999;*/
 }
@@ -76,13 +75,13 @@ html { overflow-y:scroll; overflow-x:hidden; }
 
 @-webkit-keyframes flys {
   100% {
-    background-position: -900px 0;
+    background-position: -1900px 0;
   }
 }
 
 @keyframes flys {
   100% {
-    background-position: -900px 0;
+    background-position: -1900px 0;
   }
 }
 
