--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 html { overflow-y:scroll; overflow-x:hidden; }
 
 .container {
-  background: linear-gradient(#81c8fc, #eaf5fb);
+  /*background: linear-gradient(#81c8fc, #eaf5fb);*/
   background-image: url("apt.jpg");
   background-repeat: no-repeat;
   /*width: 1600px;*/
