--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ html { overflow-y:scroll; overflow-x:hidden; }
   background-image: url("apt.jpg");
   background-repeat: no-repeat;
   /*width: 1600px;*/
+  max-width:100%;
   min-height: 600px;
+  padding : 3px; border:solid 2px green;
   background-size: 100% 100%;
   /*position: absolute;
   z-index: -999;*/
