--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ html { overflow-y:scroll; overflow-x:hidden; }
   /*width: 1600px;*/
   max-width:100%;
   min-height: 600px;
-  padding : 3px; border:solid 2px green;
+  padding : 3px; border:solid 3px red;
   background-size: 100% 100%;
   /*position: absolute;
   z-index: -999;*/
