--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ html { overflow-y:scroll; overflow-x:hidden; }
   /*width: 1600px;*/
   max-width:100%;
   min-height: 600px;
-  padding : 3px; border:solid 3px blue;
+  padding : 3px; border:solid 3px red;
   background-size: 100% 100%;
   /*position: absolute;
   z-index: -999;*/
@@ -136,10 +136,10 @@ html { overflow-y:scroll; overflow-x:hidden; }
 
 @keyframes walk {
   0% {
-    transform: translateX(100px)translateY(185px) scale(0.3);
+    transform: translateX(160px)translateY(185px) scale(0.3);
   }
   25% {
-    transform: translateX(145px) translateY(200px) scale(0.5);
+    transform: translateX(165px) translateY(200px) scale(0.5);
   }
   50% {
     transform: translateX(185px) translateY(210px) scale(1.0);
